# upClock

./: .gitignore  AGENT.md  LICENSE  README.md  config.local.py  main.py  pyproject.toml  setup.py
docs/: vision_plan.md
scripts/: __init__.py  build_macos_app.sh  build_macos_app_light.sh  dev_server.py
src/upclock/: __init__.py  config.py  config_store.py  service.py
src/upclock/adapters/: __init__.py  base.py
src/upclock/adapters/macos/: __init__.py  input_monitor.py  window_monitor.py
src/upclock/adapters/vision/: __init__.py  base.py  camera_adapter.py  capture.py  controller.py  diff_presence.py  permissions.py  posture_estimator.py  posture_onnx.py  simulated.py
src/upclock/core/: __init__.py  activity_engine.py  signal_buffer.py
src/upclock/notifiers/: __init__.py  base.py
src/upclock/notifiers/macos/: __init__.py  notification.py
src/upclock/ui/: __init__.py  server.py
src/upclock/ui/static/: index.html
src/upclock/ui/static/css/: styles.css
src/upclock/ui/static/js/: app.js
src/upclock/ui/status/: __init__.py  status_bar.py
tests/: test_activity_engine.py  test_macos_input_monitor.py  test_macos_window_monitor.py  test_posture_estimator.py  test_posture_onnx.py
